adição de tooltip nas imagens de projetos

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <section id="projects" class="hidden from-left">
                 <h2 class="titleMain">Projetos</h2>
                 <div  class="wrapperProjects">
-                    <div data-tilt class="project">
+                    <div  class="project">
                         <div class="titleProject">
                             <div class="buttons">
                                 <span class="red"></span>
@@ -224,12 +224,12 @@
                             <h3>Lírios Recepções</h3>
                         </div>
                         <div  class="projects-img ">
-                            <div class="backgroundImage">
+                            <div data-tilt aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-js"></i>
                                 <i class="fa-brands fa-html5"></i>
                                 <i class="fa-brands fa-css3"></i>
                             </div>
-                            <img src="./assets/liriosImage.jpeg" alt="" />
+                            <img  src="./assets/liriosImage.jpeg" alt="" />
                         </div>
                     </div>
 
@@ -243,7 +243,7 @@
                             <h3>Bikcraft</h3>
                         </div>
                         <div  class="projects-img bikcraft">
-                            <div class="backgroundImage">
+                            <div aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-js"></i>
                                 <i class="fa-brands fa-html5"></i>
                                 <i class="fa-brands fa-css3"></i>
@@ -262,7 +262,7 @@
                             <h3>Animais Fantásticos</h3>
                         </div>
                         <div  class="projects-img animais">
-                            <div class="backgroundImage">
+                            <div aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-js"></i>
                                 <i class="fa-brands fa-html5"></i>
                                 <i class="fa-brands fa-css3"></i>
@@ -281,7 +281,7 @@
                             <h3>Dogs</h3>
                         </div>
                         <div  class="projects-img">
-                            <div class="backgroundImage">
+                            <div aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-react"></i>
                                 <i class="fa-brands fa-js"></i>
                                 <i class="fa-brands fa-css3"></i>
@@ -300,7 +300,7 @@
                             <h3>Portfólio Dra. Vitória</h3>
                         </div>
                         <div class="projects-img">
-                            <div class="backgroundImage">
+                            <div aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-js"></i>
                                 <i class="fa-brands fa-html5"></i>
                                 <i class="fa-brands fa-css3"></i>
@@ -319,7 +319,7 @@
                             <h3>Gestão de clientes</h3>
                         </div>
                         <div  class="projects-img">
-                            <div class="backgroundImage">
+                            <div aria-label="Clique para mais informações." data-tooltip class="backgroundImage">
                                 <i class="fa-brands fa-python"></i>
                                 <img class="flask" src="./assets/flask.svg" alt="">
                                 <i class="fa-brands fa-js"></i>
