--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <section id="projects" class="hidden from-left">
                 <h2 class="titleMain">Projetos</h2>
                 <div  class="wrapperProjects">
-                    <div  class="project">
+                    <div data-tilt class="project">
                         <div class="titleProject">
                             <div class="buttons">
                                 <span class="red"></span>
