mudanças nas arrows

--- a/index.html
+++ b/index.html
@@ -71,39 +71,40 @@
         </header>
         <main>
             <section id="profile" class="hidden">
-                <div class="intro_picture hidden">
-                    <a
-                        target="_blank"
-                        href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"
-                        ><img src="./assets/logo.jpeg" alt=""
-                    /></a>
-                </div>
-                <div class="intro_info">
-                    <p class="first_p">Olá! Meu nome é</p>
-                    <h1 class="pageTitle">Victor Nepomuceno</h1>
-                    <p class="last_p">Desenvolvedor FullStack</p>
-                    <!-- <i class="fa-regular fa-face-laugh-wink fa-spin"></i> -->
-                    <div class="dev-links">
-                        <a target="_blank" href="./assets/Curriculo.pdf"
-                            >Currículo</a
-                        >
-                        <a href="#contact">Contato</a>
-                    </div>
-                    <div class="dev-socials">
-                        <a target="_blank" href="mailto:victornepomucenodev@gmail.com"
-                            ><i class="fa-solid fa-envelope"></i
-                        ></a>
-                        <a target="_blank" href="https://github.com/VictorNepomuceno"
-                            ><i class="fa-brands fa-github"></i
-                        ></a>
+                <div class="profileID">
+                    <div class="intro_picture hidden">
                         <a
                             target="_blank"
                             href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"
-                            ><i class="fa-brands fa-linkedin"></i
-                        ></a>
+                            ><img src="./assets/logo.jpeg" alt=""
+                        /></a>
+                    </div>
+                    <div class="intro_info">
+                        <p class="first_p">Olá! Meu nome é</p>
+                        <h1 class="pageTitle">Victor Nepomuceno</h1>
+                        <p class="last_p">Desenvolvedor FullStack</p>
+                        <div class="dev-links">
+                            <a target="_blank" href="./assets/Curriculo.pdf"
+                                >Currículo</a
+                            >
+                            <a href="#contact">Contato</a>
+                        </div>
+                        <div class="dev-socials">
+                            <a target="_blank" href="mailto:victornepomucenodev@gmail.com"
+                                ><i class="fa-solid fa-envelope"></i
+                            ></a>
+                            <a target="_blank" href="https://github.com/VictorNepomuceno"
+                                ><i class="fa-brands fa-github"></i
+                            ></a>
+                            <a
+                                target="_blank"
+                                href="https://www.linkedin.com/in/victor-nepomuceno-97b0a62a1/"
+                                ><i class="fa-brands fa-linkedin"></i
+                            ></a>
+                        </div>
                     </div>
                 </div>
-                <div>
+                <div class="arrowProfile">
                     <a class="arrow" href="#about"
                         ><i class="fa-solid fa-angles-down"></i
                     ></a>
@@ -111,52 +112,50 @@
             </section>
 
             <section id="about" class="hidden from-left">
+                <div class="aboutID">
+                    <div class="about-title">
+                        <h2 class="titleMain">Sobre mim</h2>
+                    </div>
+                    <div class="about-info">
+                        <img src="./assets/about-victor.jpeg" alt="" />
+                        <div class="about-text">
+                            <div class="about-softskills">
+                                <div class="experience one">
+                                    <h3>
+                                        <i class="fa-solid fa-award"></i>Constante aprendizado
+                                    </h3>
+                                </div>
+                                <div class="experience two">
+                                    <h3>
+                                        <i class="fa-solid fa-user-group"></i>Trabalho em
+                                        equipe
+                                    </h3>
+                                </div>
+                            </div>
+                            <p>
+                                Olá! Meu nome é Victor Nepomuceno e sou um estudante de
+                                engenharia de software apaixonado por desenvolvimento
+                                fullstack. Atualmente, estou imerso em um mundo de tecnologias
+                                empolgantes, como <span>JavaScript</span>,
+                                <span>TailwindCSS</span>, <span>TypeScript</span>,
+                                <span>React</span> e <span>Python</span>. Estou constantemente buscando
+                                novos conhecimentos e desafios para aprimorar minhas
+                                habilidades e expandir meu horizonte técnico. Como um
+                                desenvolvedor curioso, estou sempre aberto para explorar novas
+                                tecnologias e tendências do mercado.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="arrowAbout">
                     <a class="arrow" href="#skills"
                         ><i class="fa-solid fa-angles-down"></i
                     ></a>
                 </div>
-                <div class="about-title">
-                    <h2 class="titleMain">Sobre mim</h2>
-                </div>
-                <div class="about-info">
-                    <img src="./assets/about-victor.jpeg" alt="" />
-                    <div class="about-text">
-                        <div class="about-softskills">
-                            <div class="experience one">
-                                <h3>
-                                    <i class="fa-solid fa-award"></i>Constante aprendizado
-                                </h3>
-                            </div>
-                            <div class="experience two">
-                                <h3>
-                                    <i class="fa-solid fa-user-group"></i>Trabalho em
-                                    equipe
-                                </h3>
-                            </div>
-                        </div>
-                        <p>
-                            Olá! Meu nome é Victor Nepomuceno e sou um estudante de
-                            engenharia de software apaixonado por desenvolvimento
-                            fullstack. Atualmente, estou imerso em um mundo de tecnologias
-                            empolgantes, como <span>JavaScript</span>,
-                            <span>TailwindCSS</span>, <span>TypeScript</span>,
-                            <span>React</span> e Python. Estou constantemente buscando
-                            novos conhecimentos e desafios para aprimorar minhas
-                            habilidades e expandir meu horizonte técnico. Como um
-                            desenvolvedor curioso, estou sempre aberto para explorar novas
-                            tecnologias e tendências do mercado.
-                        </p>
-                    </div>
-                </div>
             </section>
 
             <section id="skills" class="hidden from-left">
-                <div class="arrowSkills">
-                    <a class="arrow" href="#projects"
-                        ><i class="fa-solid fa-angles-down"></i
-                    ></a>
-                </div>
+                
                 <div class="skills-title"><h2 class="titleMain">Habilidades</h2></div>
                 <div class="skills-info-container">
                     <div class="skills-box">
@@ -208,6 +207,11 @@
                             <i class="fa-brands fa-git skillsIcon"></i><span>git</span>
                         </div>
                     </div>
+                </div>
+                <div class="arrowSkills">
+                    <a class="arrow" href="#projects"
+                        ><i class="fa-solid fa-angles-down"></i
+                    ></a>
                 </div>
             </section>
 
