--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                             </div>
                             <img  src="./assets/liriosImage.jpeg" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
                     </div>
 
                     <div data-tilt class="project">
@@ -254,6 +255,9 @@
                             </div>
                             <img  src="./assets/imagemBikcraft.jpeg" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
+
+
                     </div>
 
                     <div data-tilt class="project">
@@ -273,6 +277,8 @@
                             </div>
                             <img  src="./assets/imagemAnimais.jpeg" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
+
                     </div>
 
                     <div data-tilt class="project">
@@ -292,6 +298,8 @@
                             </div>
                             <img  src="./assets/dogs.jpeg" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
+
                     </div>
 
                     <div data-tilt class="project">
@@ -311,6 +319,8 @@
                             </div>
                             <img  src="./assets/vitorianepomuceno.jpeg" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
+
                     </div>
 
                     <div data-tilt class="project">
@@ -331,6 +341,8 @@
                             </div>
                             <img  src="./assets/GESTAOclientesPython.png" alt="" />
                         </div>
+                        <span class="projectDescription">Clique na imagem para mais informações</span>
+
                     </div>
 
             </section>
