animações nas arrows

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     </div>
                 </div>
                 <div class="arrowProfile">
+                    <div class="animationArrow"></div>
                     <a class="arrow" href="#about"
                         ><i class="fa-solid fa-angles-down"></i
                     ></a>
